Refactor dependencies: Add go-runewidth and tablewriter packages
